--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.3",
     "slevomat/coding-standard": "^6.3",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "vimeo/psalm": "^4.3"
   },
   "suggest" : {
   },
