--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.3 || ^8.0",
     "ext-mbstring": "*",
     "ext-iconv": "*"
   },
@@ -20,7 +20,8 @@
     "phpunit/phpunit": "^9.3",
     "slevomat/coding-standard": "^6.3",
     "squizlabs/php_codesniffer": "^3.5",
-    "vimeo/psalm": "^4.3"
+    "vimeo/psalm": "^4.3",
+    "captainhook/captainhook": "^5.4"
   },
   "suggest" : {
   },
@@ -36,12 +37,26 @@
   },
   "scripts": {
     "fl:lint": "phpcs --cache=build/cache/phpcs.cache",
-    "fl:phpcbf": "phpcbf --cache=build/cache/phpcs.cache",
-    "fl:test:unit:coverage:ci": "phpunit --coverage-clover build/logs/clover.xml"
+    "fl:phpcbf": "phpcbf --cache=build/cache/phpcbf.cache",
+    "fl:test:unit:coverage:ci": "phpunit --coverage-clover build/logs/clover.xml",
+    "fl:test:unit": "phpunit",
+    "fl:psalm": "psalm",
+    "fl:check": [
+      "@fl:lint",
+      "@fl:psalm",
+      "@fl:test:unit"
+    ],
+    "pre-commit": [
+      "@fl:lint",
+      "@fl:test:unit"
+    ]
   },
   "scripts-descriptions": {
     "fl:lint": "Проверяет весь исходный код на соответсвие стандартам.",
     "fl:phpcbf": "Поправляет весь исходный код на соответсвие стандартам.",
-    "fl:test:unit:coverage:ci": "Запускает все модульные тесты и генериреут отчет покрытия Clover."
+    "fl:test:unit:coverage:ci": "Запускает все модульные тесты и генериреут отчет покрытия Clover.",
+    "fl:psalm": "Статический анализ",
+    "fl:check": "Полная проверка кода",
+    "fl:test:unit": "Модульное тестирование"
   }
 }
