--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ jobs:
   include:
     - php: 7.3
     - php: 7.4
+    - php: 8.0
     - php: nightly
       env: COMPOSER_OPTIONS=--ignore-platform-reqs
   allow_failures:
