--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
     - php: 7.3
     - php: 7.4
     - php: 8.0
+      env: COMPOSER_OPTIONS=--ignore-platform-reqs
     - php: nightly
       env: COMPOSER_OPTIONS=--ignore-platform-reqs
   allow_failures:
