--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": "^7.3 || ^8.0",
+    "php": "^7.3 || ^8",
     "ext-mbstring": "*",
     "ext-iconv": "*"
   },
@@ -23,7 +23,11 @@
     "vimeo/psalm": "^4.3",
     "captainhook/captainhook": "^5.4"
   },
-  "suggest" : {
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   },
   "autoload": {
     "psr-4": {
